# IELTS-LMS

./: .env.example  .gitignore  .tsbuildinfo  Dockerfile  context.md  index.html  package.json  playwright.prod-smoke.config.ts  playwright.remote.config.ts  skill.md  vite.config.ts
.github/workflows/: mirror-main.yml
backend/: .env.example  Dockerfile  Makefile
backend/crates/worker/: Cargo.toml
backend/crates/worker/src/: lib.rs  main.rs
backend/crates/worker/src/jobs/: grading_projection.rs  outbox.rs  retention.rs
backend/crates/worker/tests/: retention_smoke.rs
backend/migrations/: 0012_websocket_connection_leases.sql  0013_proctor_presence_unique.sql  0014_student_attempt_presence.sql  0015_operation_write_hardening.sql  0016_attempt_mutation_id_uniqueness.sql  0017_production_hardening.sql  0018_exam_day_concurrency_hardening.sql  0019_violation_id_idempotency.sql  0020_schedule_role_display_names.sql
backend/scripts/: idle-ram-window.js  idle-ram-window.md  migrate-tidb-to-tidb.sh
docs/: student-mutation-process-l7.md  student-mutation-process.excalidraw
e2e/: remote-global-setup.ts  student-ipad-layout.spec.ts  student-security.spec.ts  student-workflow.spec.ts
e2e/prod-load/: 00-control-plane.spec.ts  10-student-shard.spec.ts
e2e/prod-smoke/: grading-sessions.spec.ts
e2e/support/: prodOrchestration.ts  prodProgress.ts  studentUi.ts
k6/: README.md  prod-exam-day.js
playwright-report/: index.html
src/: index.css  types.ts
src/components/: ConfirmModal.tsx  Header.tsx  QuestionBuilderPane.tsx  StimulusImageEditor.tsx  StimulusPane.tsx  (+1 more)
(+312 files in other folders)
